export csv files........

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
 <body>
 	<div id="outerDIV">
 		<div id="header">
-			<h1>**Welcome**</h1>
-			<p>Welcome to myApp</p>
+			
+			<hr/><h1>**Welcome to myApp**</h1><hr/>
+			
 		</div>
 		
 		<div id="mid"style="margin-top: 30px;">
