editing answers table..making options string

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,8 @@
 <hr/>
 <ul>
 	<li><%= link_to "Add New Question", :controller => "questionbanks", :action => "new"%></li><br/>
-	<li><%= link_to "Generate test", :controller => "genratetest", :action => "new"%></li>
+	<li><%= link_to "Generate test", :controller => "genratetest", :action => "new"%></li><br>
+	<li><%= link_to "Add Objective Questions", :controller => "addobjectivequestions", :action => "new"%>
 	</ul>
 <hr/>
 
