generate objective test.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,8 +4,9 @@
 <hr/>
 <ul>
 	<li><%= link_to "Add New Question", :controller => "questionbanks", :action => "new"%></li><br/>
-	<li><%= link_to "Generate test", :controller => "genratetest", :action => "new"%></li><br>
-	<li><%= link_to "Add Objective Questions", :controller => "addobjectivequestions", :action => "new"%>
+	<li><%= link_to "Generate Subjective Test", :controller => "genratetest", :action => "new"%></li><br>
+	<li><%= link_to "Add Objective Questions", :controller => "addobjectivequestions", :action => "new"%></li><br>
+	<li><%= link_to "Genrate Objective Test", :controller => "generateobjectivetest", :action =>"new"%></li><br>
 	</ul>
 <hr/>
 
