--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,12 @@
 <hr/>
-<h3>**Select an option**</h3>
+<h2>**Select an option**</h2>
 
 <hr/>
 <ul>
-	<li><%= link_to "Add New Question", :controller => "questionbanks", :action => "new"%></li><br/>
+	<li><%= link_to "Add Sebjective Question", :controller => "questionbanks", :action => "new"%></li><br/>
 	<li><%= link_to "Generate Subjective Test", :controller => "genratetest", :action => "new"%></li><br>
 	<li><%= link_to "Add Objective Questions", :controller => "addobjectivequestions", :action => "new"%></li><br>
-	<li><%= link_to "Genrate Objective Test", :controller => "generateobjectivetest", :action =>"new"%></li><br>
+	<li><%= link_to "Generate Objective Test", :controller => "generateobjectivetest", :action =>"new"%></li><br>
 	</ul>
 <hr/>
 
