--- a/app/views/genratetest/testgenerate.html.erb
+++ b/app/views/genratetest/testgenerate.html.erb
@@ -12,10 +12,13 @@
 			<%i=i+1%>
 		</table>
 	<%end%>
+	<hr/>
+	<h3><%= link_to "Click Export to csv", :controller => "genratetest", :action => "export_csv_test"%></h3>
 <hr/>
 <ul>
 	<li><h4><%= link_to "Home Page", :controller => "welcome", :action => "index"%></h4></li>
-	<li><h4><%= link_to "Add New Question", :controller => "questionbanks", :action => "new"%></h4></li>
-	<li><h4><%= link_to "Generate test", :controller => "genratetest", :action => "new"%></h4></li>
-	<li><h4><%= link_to "Print test", :controller => "genratetest", :action => "export_csv_test"%></li>
+	<li><%= link_to "Add Subjective Question", :controller => "questionbanks", :action => "new"%></li><br/>
+	<li><%= link_to "Generate Subjective Test", :controller => "genratetest", :action => "new"%></li><br>
+	<li><%= link_to "Add Objective Questions", :controller => "addobjectivequestions", :action => "new"%></li><br>
+	<li><%= link_to "Genrate Objective Test", :controller => "generateobjectivetest", :action =>"new"%></li><br>
 </ul>
